Add verified icon if topic is create by auth user

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Simple  tools website",
   "icons": [
     {
-      "src": "image/vectorIcon.png",
+      "src": "images/vectorIcon.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
