--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "projetq",
+  "name": "vonqey",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://melvynx.github.io/tools/",
+  "homepage": "",
   "dependencies": {
     "@material-ui/core": "^4.8.1",
     "@material-ui/icons": "^4.5.1",
@@ -20,7 +20,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.1",
     "react-transition-group": "^4.3.0",
     "typescript": "~3.7.2"
   },
