--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "my-app",
   "version": "0.1.0",
+  "homepage": "https://melvynx.github.io/ReactTools",
+  "license": "MIT",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.2",
